# mock-cq-setup

./: .gitignore  Cargo.toml  README.md  run_setup.rs  serialize_table.rs
src/: common.rs  lagrange.rs  lib.rs  powers.rs  quotients.rs  srs.rs  table.rs  utils.rs
src/fk/: mod.rs
