[package]
name = "mock-cq-setup"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = "0.4.0"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-ff = "0.4.0"
ark-ec = "0.4.0"
rayon = { version = "1.7", optional = true }

[dev-dependencies]
ark-bn254 = "0.4.0"
ark-poly = "0.4.0"

[features]
parallel = ["rayon"]
serialize = []